Used more efficient data structures operations for caches
Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>